base/apps/security/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  namespace: security
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
      app.kubernetes.io/instance: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli
        app.kubernetes.io/instance: bitwarden-cli
    spec:
      containers:
        - name: bitwarden-cli
          image: forge.internal/nemo/bitwarden-cli@sha256:2fcd2a8622342ebf7203fc6315799485b96045e21cf857763224499dea71d98f
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          # livenessProbe:
          #   exec:
          #     command:
          #       - curl
          #       - -s
          #       - -o /dev/null
          #       - -XPOST
          #       - http://127.0.0.1:8087/sync?force=true
          #   initialDelaySeconds: 20
          #   failureThreshold: 3
          #   timeoutSeconds: 10
          #   periodSeconds: 120
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
